--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "platform": {
             "php": "5.5.9"
         }
+    },
+    "scripts": {
+        "web": "php -S 0.0.0.0:8000 -t web/ web/index.php"
     }
 }
