Increase Composer timeout

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "config": {
         "platform": {
             "php": "5.5.9"
-        }
+        },
+        "process-timeout": 36000
     },
     "scripts": {
         "web": "php -S 0.0.0.0:8000 -t web/ web/index.php"
